made things Trustworthy, and some other cleanup.
Ignore-this: 80d3abddf98a49b2955387acd2f8e2b5

darcs-hash:28f118d5d774b7b00188f73457574a51f7128f0b

--- a/README
+++ b/README
@@ -34,11 +34,17 @@ extensions are:
 
     CPP
     GeneralizedNewtypeDeriving
-    MagicHash  -- only needed by GHC.
+    MagicHash    -- only for GHC
+    Trustworthy  -- only for GHC >= 7.1
 
 The GeneralizedNewtypeDeriving extension is used for brevity in
 Data.Number.CalkinWilf. If you'd like to use this package with a
 compiler that does not support that extension, contact the maintainer
 and it can be removed.
+
+This package is only "Trustworthy" rather than "Safe" for two
+reasons: (1) Data.Number.CalkinWilf uses GeneralizedNewtypeDeriving,
+and (2) Prelude.SafeEnum imports GHC.Exts for build/foldr fusion
+and for the Char instances.
 
 ----------------------------------------------------------- fin.
