--- a/AUTHORS
+++ b/AUTHORS
@@ -1,4 +1,4 @@
 === Haskell prelude-safeenum package AUTHORS/THANKS file ===
 
-The prelude-safeenum package was written by wren ng thornton and
+The prelude-safeenum package was written by wren gayle romano and
 is released under the terms in the LICENSE file.
