--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,5 @@
+0.1.1.3 (2021-10-16):
+    - Started using GithubActions for CI; no code changes.
 0.1.1.2 (2015-05-30):
     - Moved VERSION to CHANGELOG
 0.1.1 (2013.03.07):
