--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,4 +1,6 @@
-0.1.1.3 (2021-10-16):
+0.1.1.3 (2021-10-17):
+    - Updated maintainer emails/urls
+    - General metadata cleanup
     - Started using GithubActions for CI; no code changes.
 0.1.1.2 (2015-05-30):
     - Moved VERSION to CHANGELOG
