--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,6 @@
+0.1.1.5 (2022-08-28):
+    - Added `Tested-With: GHC == 9.4.1` (didn't actually need to
+      nudge the upper bound on 'base', because it's already lenient)
 0.1.1.4 (2021-11-02):
     - Added `Tested-With: GHC == 9.2.1` (didn't actually need to
       nudge the upper bound on 'base', because it's already lenient)
